1、递归解析数据类型，处理数据类型嵌套的情况 2、新增数组、Double_long、double_long _unsigned类型数据处理 3、电流电压数值计算 4、正向有功电能接口 5、反向有功电能接口 6、电压接口

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,8 @@
         <swagger.version>2.9.2</swagger.version>
 
         <netty.version>4.1.68.Final</netty.version>
+
+        <fastjson.version>2.0.22</fastjson.version>
     </properties>
     <modules>
         <module>bs-boot-common</module>
