--- a/bs-boot-common/pom.xml
+++ b/bs-boot-common/pom.xml
@@ -15,6 +15,16 @@
 
 
     <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2-extension-spring5</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
         <!--  lombok  -->
         <dependency>
             <groupId>org.projectlombok</groupId>
