docker部署，修复data_time字段解析异常问题

--- a/bs-boot-system/src/main/resources/application.yml
+++ b/bs-boot-system/src/main/resources/application.yml
@@ -3,4 +3,6 @@ spring:
     name: bs-boot-system
   profiles:
 #    active: dev
-    active: prod
+#    active: prod
+    active: docker
+#    active: jlzx
