--- a/bs-boot-system/src/main/resources/application-docker.yml
+++ b/bs-boot-system/src/main/resources/application-docker.yml
@@ -46,13 +46,13 @@ spring:
       primary: master
       datasource:
         master:
-          url: jdbc:mysql://127.0.0.1:3306/bs-boot?characterEncoding=UTF-8&useUnicode=true&useSSL=false&tinyInt1isBit=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai&rewriteBatchedStatements=true&allowMultiQueries=true
+          url: jdbc:mysql://mysql:3306/bs-boot?characterEncoding=UTF-8&useUnicode=true&useSSL=false&tinyInt1isBit=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai&rewriteBatchedStatements=true&allowMultiQueries=true
           username: root
           password: root
           driver-class-name: com.mysql.cj.jdbc.Driver
   redis:
     database: 3
-    host: 127.0.0.1
+    host: redis
     # password:
     port: 6379
     jedis:
@@ -78,6 +78,8 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     # 处理查询空值
     call-setters-on-nulls: true
-
-
-
+logging:
+  file:
+    name: /logs/bs-boot-system.log
+  level:
+    root: info
